# scop

./: CMakeLists.txt  Makefile  README.md  controls.json  run.sh  scop  vcpkg.json
assets/materials/: Lighter.mtl  Plant.mtl  house_ivy_(OBJ).mtl
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
include/: App.hpp  Camera.hpp  Entity.hpp  ErrorHandler.hpp  FontLoader.hpp  InputManager.hpp  InputObserver.hpp  Label.hpp  ListScenesMenu.hpp  MainMenu.hpp  Matrix.hpp  Model.hpp  Object.hpp  Scene.hpp  Shader.hpp  State.hpp  StatesManager.hpp  TextureLoader.hpp  Vector.hpp
shaders/: FragmentShader.glsl  MenuFragmentShader.glsl  TextureFragmentShader.glsl  VertexShader.glsl  simpleFragShader.glsl  toonFragmentShader.glsl
src/: App.cpp  Camera.cpp  ErrorHandler.cpp  FontLoader.cpp  Helpers.cpp  InputManager.cpp  Label.cpp  ListScenesMenu.cpp  ListScenesMenu.hpp  MainMenu.cpp  Matrix.cpp  Model.cpp  Object.cpp  Scene.cpp  Shader.cpp  State.cpp  StateManager.cpp  TextureLoader.cpp  Vector.cpp  glad.cpp  main.cpp
